Fix spacing on volunteer page
The image overlay text could grow bigger than the image on some
screens, so move most of it below the image.

Also, the contact link should say "contact" and not "discover".

Closes #59.

--- a/transport_nantes/asso_tn/static/asso_tn/transport_nantes.css
+++ b/transport_nantes/asso_tn/static/asso_tn/transport_nantes.css
@@ -130,3 +130,10 @@ span.centered {
     text-align: center;
     font-size: 150%;
 }
+.banner-list {
+    background: #7f6966;
+    color: #5bc2e7;
+    font-weight: 700;
+    text-align: left;
+    font-size: 150%;
+}
